fix: 🐛 Solución al problema de overflow de contenido

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,5 @@
 // Variables
+$color-primary: white;
 $color-secundary: rgb(60, 156, 225);
 
 .page {
