--- a/src/app/components/img/img.component.scss
+++ b/src/app/components/img/img.component.scss
@@ -2,4 +2,5 @@ img {
     max-width: 100%;
     max-height: 200px;
     min-height: 200px;
+    border-radius: 10px;
 }
