--- a/src/app/components/rocket/rocket.component.scss
+++ b/src/app/components/rocket/rocket.component.scss
@@ -20,7 +20,7 @@ $color-secundary: rgb(60, 156, 225);
         padding: 8px;
         margin-top: 10px;
         border-radius: 8px;
-        font-size: 1em;
+        font-size: 1.6rem;
         border-style: solid;
         border-width: 2px;
         border-color: $color-secundary;
