--- a/src/app/components/rockets/rockets.component.scss
+++ b/src/app/components/rockets/rockets.component.scss
@@ -1,28 +1,99 @@
+// Variables
+$color-primary: white;
+$color-secundary: rgb(60, 156, 225);
+
 .rocket--detail {
     position: fixed;
-    top: 0;
-    left: 50%;
-    bottom: 0;
-    right: 0;
+    top: 20%;
+    left: 70%;
+    bottom: 20%;
+    right: 0%;
+    padding: 20px;
+    margin: 2px;
+    min-height: 200px;
+    border-radius: 20px;
     background-color: white;
+    box-shadow: 2px 2px 8px gray;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
     transition: all ease-out 0.5s;
     transform: translateX(100%);
     &.active {
         transform: translateX(0%);
+    }
+    .detail--content{
+        overflow-y: auto;
+    }
+    .rocket--close {
+        width: auto !important;
+        border-width: 0px;
+        background-color: white;
+        font-size: 2rem;
+        &:hover {
+            border-radius: 50%;
+            background-color: rgb(249, 49, 49);
+        }
+    }
+    .rocket--img {
+        width: 100%;
+        img {
+            width: 100%;
+        }
+    }
+    .rocket--name {
+        margin: 5px auto;
+        font-size: 2rem;
+        font-weight: bold;
+    }
+    .rocket--country {
+        font-weight: bold;
+        margin: 5px 0px;
+    }
+    .rocket--height {
+        margin: 5px 0px;
+        span {
+            font-weight: bold;
+        }
+    }
+    .detail--buttons {
+        display: flex;
+        justify-content: center;
+        bottom: 100%;
+        gap: 5px;
+        .btn {
+            width: 50%;
+            padding: 8px;
+            margin-top: 10px;
+            border-radius: 8px;
+            font-size: 1.6rem;
+            border-style: solid;
+            border-width: 2px;
+            border-color: $color-secundary;
+            color: $color-secundary;
+            background-color: $color-primary;
+            &:hover {
+                color: $color-primary;
+                background-color: $color-secundary;
+            }
+        }
+        .btn--edit {
+            &:hover {
+                border-width: 0px;
+                background-color: green;
+            }
+        }
+        .btn--delete {
+            &:hover {
+                border-width: 0px;
+                background-color: red;
+            }
+        }
     }
 }
 
 .rockets--grid {
     display: grid;
     grid-gap: 15px;
-    app-img {
-        img {
-            border-radius: 10px;
-        }
-    }
 }
 
 // tablets
@@ -45,6 +116,8 @@
     .rockets--grid {
         grid-template-columns: repeat(4, 1fr);
         grid-gap: 25px;
+    }
+    .rocket--detail {
     }
 }
 
